cargo-features = ["strip"]

[workspace]
members = [
  "wgpu_lut",
  "wgpu_lut_c",
  "gfx-backend-dx11",
  "gfx-backend-gl",
]

[profile.release]
panic = "abort"
strip = "symbols"
lto = true

[patch.crates-io]
gfx-backend-gl = { path = "./gfx-backend-gl" }
gfx-backend-dx11 = { path = "./gfx-backend-dx11" }
