[package]
name = "wgpu_lut_c"
version = "0.1.0"
authors = ["xhe <xw897002528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wgpu_lut_c"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wgpu_lut = { version = "0.1", path = "../wgpu_lut" }
lazy_static = "1.4"
async-std = "1.9"
anyhow = "1.0"
